# nid-correction-portal-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  nid-correction-portal.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  nid-correction-portal.rockspec  (+2 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  nidcorrectionportal_sdk.py  nidcorrectionportal_types.py  pyproject.toml
py/core/: context.py  error.py  helpers.py  response.py  result.py  spec.py
py/entity/: application_entity.py  authentication_entity.py  correction_request_entity.py
py/feature/: log_feature.py  netsim_feature.py  proxy_feature.py  retry_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_application_direct.py  test_application_entity.py  test_authentication_entity.py  test_correction_request_direct.py  test_correction_request_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_request.py  make_response.py  make_result.py  make_spec.py  prepare_headers.py  prepare_params.py  prepare_query.py  result_body.py  result_headers.py
(+457 files in other folders)
